--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2075,7 +2075,7 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
 
 .modal-content{width: 100%;height: 100%;}
 
-.modal-comment {width: 90%;margin: 0 auto;display: flex;flex-direction: column;align-items: center;justify-content: center;}
+.modal-comment {width: 90%;margin: 0 auto;display: flex;flex-direction: column;align-items: center;justify-content: center;padding-top: 3em;}
 
 .editor {width: 100%;height: 300px;padding: 10px;font-size: 14px;border: 1px solid #ccc;border-radius: 5px;}
 
@@ -2099,7 +2099,7 @@ h2 {font-family: "Inter", sans-serif;font-weight: 600;font-size: 1.5em;text-alig
 
 .modal-reply{height: 50px;max-height: 100px;width: 80%;justify-self: center;margin: 1.5em 0 1em 0;}
 
-.modalReplyTitle{display: flex;align-items: center;text-align: left;gap: 2%;}
+.modalReplyTitle{display: flex;align-items: center;text-align: left;gap: 3%;}
 
 .modalReplyTitle i{align-content: center;text-align: center;font-size: 1.2em;color: #0A4DC1;width: 9%;height: 30px;border: 1px solid rgba(0, 0, 0, 0.257);}
 
